# cleanit

./: .gitignore  .travis.yml  Dockerfile  HISTORY.md  HISTORY.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker-publish.yml  publish.yml  test.yml
cleanit/: __init__.py  api.py  cli.py  config.py  core.py  rule.py  schema.py  subtitle.py  utils.py
cleanit/data/: __init__.py  cleanit-no-lyrics.yml  cleanit-no-sdh.yml  cleanit-no-spam.de.yml  cleanit-no-spam.en.yml  cleanit-no-spam.pt.yml  cleanit-no-spam.yml  cleanit-no-style.yml  cleanit-ocr.en.yml  cleanit-ocr.pt.yml  cleanit-ocr.yml  cleanit-tidy.en.yml  cleanit-tidy.pt.yml  cleanit-tidy.yml  cleanit.yml
scripts/: test.sh
tests/: samples.py  test_data.py  test_rule.py  test_schema.py
tests/data/: 000.A.en.srt  000.B.ocr.no-style.no-sdh.no-lyrics.no-spam.tidy.en.srt  001.A.pt-BR.srt  001.B.ocr.no-style.no-sdh.no-lyrics.no-spam.tidy.pt-BR.srt  002.A.en.srt  002.B.ocr.no-sdh.no-spam.tidy.en.srt  003.A.en.srt  003.B.ocr.no-lyrics.tidy.en.srt
