[tool.poetry]
name = "cleanit"
version = "0.4.8"
description = "Subtitles extremely clean"
authors = [
    "Rato",
]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/ratoaq2/cleanit"
keywords = [
    "subtitle",
    "subtitles",
    "clean",
    "denylist",
    "replace",
    "ocr",
    "fix",
    "tidy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
cleanit = "cleanit.cli:cleanit"

[tool.poetry.dependencies]
python = "^3.9.0"
appdirs = "^1.4.4"
babelfish = "^0.6.0"
chardet = "^5.1.0"
click = "^8.1.3"
jsonschema = "^4.17.3"
pysrt = "^1.1.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
